# langchain-engram

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_with_memory.py  conversation_and_topics.py
langchain_engram/: __init__.py  _client.py  _version.py  middleware.py  store.py  tools.py
notebooks/: 0_setup_and_smoke_test.ipynb  1_middleware_agent_memory.ipynb  2_memory_tools.ipynb  3_engram_store.ipynb  4_conversation_scoping.ipynb  5_topics.ipynb  README.md
scripts/: check_imports.py
tests/integration_tests/: test_compile.py  test_memory.py
tests/unit_tests/: _fakes.py  test_client.py  test_imports.py  test_middleware.py  test_store.py  test_tools.py
